--- a/index.html
+++ b/index.html
@@ -383,13 +383,6 @@
 <section id="our-testimonial" class="padding">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-sm-12 text-center">
-        <div class="heading-title bottom30 wow fadeInUp" data-wow-delay="300ms"> <span>Testimonials</span>
-          <h2 class="darkcolor">What People Say</h2>
-        </div>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-md-12 col-sm-12">
         <div id="testimonial-slider" class="owl-carousel">
           <div class="item">
@@ -406,7 +399,7 @@
               <div class="testimonial-text">
                 <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
               </div>
-              <div class="testimonial-photo"><img alt="" src="images/testimonial-2.jpg"></div>
+              <div class="testimonial-photo"><img alt="" src="images/Testimonial/testimonial-1.jpg"></div>
               <h4 class="darkcolor">Jams Shah</h4>
               <small class="defaultcolor">Businessman</small> </div>
           </div>
@@ -415,7 +408,7 @@
               <div class="testimonial-text">
                 <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
               </div>
-              <div class="testimonial-photo"><img alt="" src="images/testimonial-3.jpg"></div>
+              <div class="testimonial-photo"><img alt="" src="images/Testimonial/testimonial-1.jpg"></div>
               <h4 class="darkcolor">Zubin Zucker</h4>
               <small class="defaultcolor">Businessman</small> </div>
           </div>
@@ -424,7 +417,7 @@
               <div class="testimonial-text">
                 <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
               </div>
-              <div class="testimonial-photo"><img alt="" src="images/testimonial-1.jpg"></div>
+              <div class="testimonial-photo"><img alt="" src="images/Testimonial/testimonial-1.jpg"></div>
               <h4 class="darkcolor">David Zucker</h4>
               <small class="defaultcolor">Businessman</small> </div>
           </div>
@@ -433,7 +426,7 @@
               <div class="testimonial-text">
                 <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
               </div>
-              <div class="testimonial-photo"><img alt="" src="images/testimonial-2.jpg"></div>
+              <div class="testimonial-photo"><img alt="" src="images/Testimonial/testimonial-1.jpg"></div>
               <h4 class="darkcolor">Akten Jansen</h4>
               <small class="defaultcolor">Businessman</small> </div>
           </div>
@@ -442,7 +435,7 @@
               <div class="testimonial-text">
                 <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
               </div>
-              <div class="testimonial-photo"><img alt="" src="images/testimonial-3.jpg"></div>
+              <div class="testimonial-photo"><img alt="" src="images/Testimonial/testimonial-1.jpg"></div>
               <h4 class="darkcolor">Doe Raleway</h4>
               <small class="defaultcolor">Businessman</small> </div>
           </div>
@@ -451,7 +444,7 @@
               <div class="testimonial-text">
                 <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
               </div>
-              <div class="testimonial-photo"><img alt="" src="images/testimonial-1.jpg"></div>
+              <div class="testimonial-photo"><img alt="" src="images/Testimonial/testimonial-1.jpg"></div>
               <h4 class="darkcolor">Shamoun Raleway</h4>
               <small class="defaultcolor">Businessman</small> </div>
           </div>
@@ -460,7 +453,7 @@
               <div class="testimonial-text">
                 <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
               </div>
-              <div class="testimonial-photo"><img alt="" src="images/testimonial-3.jpg"></div>
+              <div class="testimonial-photo"><img alt="" src="images/Testimonial/testimonial-1.jpg"></div>
               <h4 class="darkcolor">Albugdadi Raleway</h4>
               <small class="defaultcolor">Businessman</small> </div>
           </div>
@@ -469,7 +462,7 @@
               <div class="testimonial-text">
                 <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
               </div>
-              <div class="testimonial-photo"><img alt="" src="images/testimonial-3.jpg"></div>
+              <div class="testimonial-photo"><img alt="" src="images/Testimonial/testimonial-1.jpg"></div>
               <h4 class="darkcolor">Albugdadi Raleway</h4>
               <small class="defaultcolor">Businessman</small> </div>
           </div>
