--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="carousel-item">
                         <img src="images/cover/2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1 class="fw-bold">Learn without limits</h1>
+                            <h1 class="fw-bold">Courses You Can Complete in a Day</h1>
                             <h5>Start, switch, or advance your career with more than 5,000 courses, Professional
                                 Certificates, and degrees from world-class universities and companies.</h5>
                             <button type="button" class="btn btn-info btn-lg text-white">Large button</button>
@@ -102,7 +102,7 @@
                     <div class="carousel-item">
                         <img src="images/cover/3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1 class="fw-bold">Learn without limits</h1>
+                            <h1 class="fw-bold">Start Learning with Free Courses</h1>
                             <h5>Start, switch, or advance your career with more than 5,000 courses, Professional
                                 Certificates, and degrees from world-class universities and companies.</h5>
                             <button type="button" class="btn btn-info btn-lg text-white">Large button</button>
@@ -159,7 +159,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start"
+                                    <img src="images/course/course-2.png" class="img-fluid w-100 rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -178,7 +178,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start"
+                                    <img src="images/course/course-3.png" class="img-fluid w-100 rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -197,12 +197,12 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start"
+                                    <img src="images/course/course-4.png" class="img-fluid w-100 rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title fw-bold">Fundamental Of UI/UX Design</h3>
+                                        <h3 class="card-title fw-bold">English for Career Development</h3>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card.</p>
                                         <h4>Price : 49$</h4>
@@ -216,12 +216,12 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start"
+                                    <img src="images/course/course-5.png" class="img-fluid w-100 rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title fw-bold">Fundamental Of UI/UX Design</h3>
+                                        <h3 class="card-title fw-bold">AWS Cloud Technical Essentials</h3>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card.</p>
                                         <h4>Price : 99$</h4>
@@ -235,12 +235,12 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start"
+                                    <img src="images/course/course-6.png" class="img-fluid w-100 rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title fw-bold">Fundamental Of UI/UX Design</h3>
+                                        <h3 class="card-title fw-bold">Stanford Introduction to Food and Health</h3>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card.</p>
                                         <h4>Price : 49$</h4>
@@ -409,7 +409,7 @@
                     <div class="col-md-6 col-sm-12 col-lg-3">
                         <div class="border rounded-3">
                             <img src="images/student/student-1.png" class="card-img-top" alt="...">
-                            <div class="card-body">
+                            <div class="card-body py-4">
                                 <h4 class="card-title fw-bold">Awlad Hossain</h4>
                                 <p class="card-text">UI/UX Designer</p>
                             </div>
@@ -419,7 +419,7 @@
                     <div class="col-md-6 col-sm-12 col-lg-3">
                         <div class="border rounded-3">
                             <img src="images/student/student-2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
+                            <div class="card-body py-4">
                                 <h4 class="card-title fw-bold">Jannatul Islam</h4>
                                 <p class="card-text">Motion Design</p>
                             </div>
@@ -429,7 +429,7 @@
                     <div class="col-md-6 col-sm-12 col-lg-3">
                         <div class="border rounded-3">
                             <img src="images/student/student-3.png" class="card-img-top" alt="...">
-                            <div class="card-body">
+                            <div class="card-body py-4">
                                 <h4 class="card-title fw-bold">Imran Hossain</h4>
                                 <p class="card-text">Graphic Designer</p>
                             </div>
@@ -439,7 +439,7 @@
                     <div class="col-md-6 col-sm-12 col-lg-3">
                         <div class="border rounded-3">
                             <img src="images/student/student-4.png" class="card-img-top" alt="...">
-                            <div class="card-body">
+                            <div class="card-body py-4">
                                 <h4 class="card-title fw-bold">Nishi Akter</h4>
                                 <p class="card-text">Web Developer</p>
                             </div>
@@ -763,7 +763,7 @@
                         <a href="index.html"><img class="coursera-logo-footer pt-5" src="images/logo.svg" alt="" srcset=""></a>
                         <p class="pt-4">Office 41, Zawaya Buildin, Ghala Muscat</p>
                         <p>Sultanate of Oman</p>
-                        <div class="useful-link">
+                        <div class="useful-link py-3">
                             <a href="#" class="btn text-warning">Privacy Ploicy</a>
                             |
                             <a href="#" class="btn text-warning">Terms of use</a>
