Final Commit Alhamdulillah

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <h1 class="fw-bold">Learn without limits</h1>
                             <h5>Start, switch, or advance your career with more than 5,000 courses, Professional
                                 Certificates, and degrees from world-class universities and companies.</h5>
-                            <button type="button" class="btn btn-info btn-lg text-white">Large button</button>
+                            <button type="button" class="btn btn-info btn-lg text-white">Get Started</button>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -96,7 +96,7 @@
                             <h1 class="fw-bold">Courses You Can Complete in a Day</h1>
                             <h5>Start, switch, or advance your career with more than 5,000 courses, Professional
                                 Certificates, and degrees from world-class universities and companies.</h5>
-                            <button type="button" class="btn btn-info btn-lg text-white">Large button</button>
+                            <button type="button" class="btn btn-info btn-lg text-white">Get Started</button>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -105,7 +105,7 @@
                             <h1 class="fw-bold">Start Learning with Free Courses</h1>
                             <h5>Start, switch, or advance your career with more than 5,000 courses, Professional
                                 Certificates, and degrees from world-class universities and companies.</h5>
-                            <button type="button" class="btn btn-info btn-lg text-white">Large button</button>
+                            <button type="button" class="btn btn-info btn-lg text-white">Get Started</button>
                         </div>
                     </div>
                 </div>
